// tag::minimal[]
syntax = "proto3";

package shoppingcart;

option java_package = "shoppingcart.api.proto";

service ShoppingCartEndpoint {
  // end::minimal[]

  rpc GetCart(GetCartRequest) returns (ShoppingCart) {}
  rpc AddItem(AddItemRequest) returns (AddItemResponse) {}
  rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse) {}

  rpc Checkout(CheckoutRequest) returns (CheckoutResponse) {}
  // tag::minimal[]
}

message GetCartRequest {
  string cartId = 1;
}
// end::minimal[]

message AddItemRequest {
  string cartId = 1;
  LineItem item = 2;
}

message AddItemResponse {
  bool success = 1;
}

message RemoveItemRequest {
  string cartId = 1;
  string productId = 2;
}

message RemoveItemResponse {
  bool success = 1;
}

message CheckoutRequest {
  string cartId = 1;
}

message CheckoutResponse {
  bool success = 1;
}

// tag::minimal[]

message ShoppingCart {
  string cartId = 1;
  repeated LineItem items = 2;
  bool checkedOut = 3;
}

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}
// end::minimal[]